Update webpack.config and package.json

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div id="content"></div>
-  <script src="./dist/bundle.js"></script>
+  <script src="./dist/bundle.vendor.js"></script>
+  <script src="./dist/bundle.app.js"></script>
 </body>
 </html>
