Update config files, scaffold project structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
   <div id="content"></div>
-  <script src="./dist/bundle.vendor.js"></script>
-  <script src="./dist/bundle.app.js"></script>
+  <script src="./dist/bundle.js"></script>
 </body>
 </html>
