Migrate to vite

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -9,8 +10,10 @@
   <link rel="shortcut icon" href="/favicon.ico" />
   <title>Yum yum</title>
 </head>
+
 <body>
   <div id="content"></div>
-  <script src="/dist/bundle.js"></script>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
+
 </html>
